bugfix: popup-z-index

--- a/dev.css
+++ b/dev.css
@@ -239,6 +239,7 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, .5);
+  z-index: 2;
 }
 
 .popup_opened {
@@ -329,7 +330,24 @@
 
   .popup__close-btn {
     width: 24px;
-    height: 24px;
+    height: 24px;    
+  }
+}
+@media screen and (max-width:360px) {
+  .popup__close-btn {
     right: 0;
+  }
+}
+
+
+@media screen and (max-height: 405px) {
+  .popup__close-btn {
+    top: 0
+  }
+}
+
+@media screen and (max-height: 405px) and (max-width:570px) {
+  .popup__close-btn {
+    background-color: black;
   }
 }
